# DRAP

./: .gitignore  Cargo.toml  DARP.txt  DRAP.docx  README.md  README_pdf_parser.md  drap.yml  init.sql  later.txt  pdf_parser.py  test_output.md
certs/: cert.pem  key.pem
crates/drap-client/: Cargo.toml
crates/drap-client/src/: config.rs  connection.rs  display.rs  lib.rs  main.rs
crates/drap-common/: Cargo.toml
crates/drap-common/src/: lib.rs  tls.rs
crates/drap-protocol/: Cargo.toml
crates/drap-protocol/src/: codec.rs  frame_type.rs  lib.rs
crates/drap-server/: Cargo.toml
crates/drap-server/src/: control_server.rs  dashboard.rs  dashboard_server.rs  data_server.rs  db.rs  error_pages.rs  inspector.rs  lib.rs  main.rs  router.rs  subdomain_gen.rs  tcp_server.rs  udp_server.rs
crates/drap-server/src/security/: rate_limiter.rs
crates/drap-testing/: Cargo.toml
crates/drap-testing/src/: main.rs
dashboard/api/: go.mod  main.go
dashboard/ui/: package-lock.json  package.json
dashboard/ui/src/routes/: +page.svelte
deploy/: docker-compose.yml
