[package]
name = "drap-testing"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
drap-client = { path = "../drap-client" }
drap-server = { path = "../drap-server" }
sysinfo = "0.30"
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
drap-protocol = { path = "../drap-protocol" }
drap-common = { path = "../drap-common" }
futures = { workspace = true }
tokio-rustls = { version = "0.26", features = ["ring"] }
tokio-stream = "0.1"
